--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,9 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
+    <string name="update_place">Actualiza el lugar</string>
+    <string name="create_place">Agregar el lugar</string>
+
     <string name="msg_error">Error con los datos</string>
     <string name="msg_nombre">Nombre del lugar</string>
     <string name="msg_lugar_added">Lugar added succesfully</string>
